<LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView">
    </ScrollView>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/main_text_subTitle"
                android:id="@+id/main_text_subTitle"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/main_text_appPreferences"
                android:id="@+id/maint_text_appPreferences" android:background="@color/Title_color"
                android:clickable="true"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:textAppearance="?android:attr/textAppearanceMedium"
                  android:text="@string/main_text_appPreferences_open"
                  android:id="@+id/main_text_appPreferences_open"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:textAppearance="?android:attr/textAppearanceMedium"
                  android:text="@string/main_text_appPreferences_fav"
                  android:id="@+id/main_text_appPreferences_fav"/>
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_button_tee_preferences_edit"
                android:id="@+id/main_button_tee_preferences_edit"/>
        <Button android:layout_width="match_parent" android:layout_height="wrap_content"
                android:text="@string/main_button_tee_set_default"
                android:id="@+id/main_button_tee_set_default"/>
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:textAppearance="?android:attr/textAppearanceLarge"
                  android:text="@string/main_text_fileSystem" android:id="@+id/main_text_fileSystem"
                  android:background="@color/Title_color"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/main_editText_fileSystem_input_text"
                android:text="@string/main_editText_fileSystem_input_text"/>
        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_checkBox_extern"
                android:id="@+id/main_checkBox_extern"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
            <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_button_fileSystem_save"
                    android:id="@+id/main_button_fileSystem_save" android:layout_gravity="left"
                    android:layout_weight="0.5"/>
            <Button style="?android:attr/buttonStyleSmall" android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:text="@string/main_button_fileSystem_load"
                    android:id="@+id/main_button_fileSystem_load" android:layout_gravity="right"
                    android:layout_weight="0.5"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>